--- a/01jupyter/notebooks/source/cs01/cs01_omp_multicore.py.ipynb
+++ b/01jupyter/notebooks/source/cs01/cs01_omp_multicore.py.ipynb
@@ -208,7 +208,8 @@
       },
       "source": [
         "* `OMP_NUM_THREADS` という環境変数 (「環境変数」を知らない人は以下のようにコマンドの前にある`変数名=値`のことだと思えば良い) を設定すると, `printf(\"in parallel\\n\");` (`#pragma omp parallel` 直下の文) を実行するスレッドの数を変えられる\n",
-        "* 以下で`OMP_NUM_THREADS`に設定する値を色々変えて実行してみよ"
+        "* 以下はログインノード上で実行する\n",
+        "* `OMP_NUM_THREADS`に設定する値を色々変えて実行してみよ"
       ]
     },
     {
@@ -245,6 +246,50 @@
         }
       },
       "source": [
+        "* 以下はジョブ投入をして実行する\n",
+        "* 必要に応じて rscgrp や elapse などを指定して実行せよ\n",
+        "* 例:\n",
+        "```\n",
+        "#PJM -L rscgrp=lecture7-a\n",
+        "#PJM -L elapse=0:10:00\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-011",
+          "locked": false,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
+        "%%bash_submit\n",
+        "\n",
+        "OMP_NUM_THREADS=3 ./omp_parallel_mp.exe"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-012",
+          "locked": true,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
         "\n",
         "* 文法\n",
         "```\n",
@@ -274,7 +319,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-011",
+          "grade_id": "c-013",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -294,7 +339,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-012",
+          "grade_id": "c-014",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -314,7 +359,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-013",
+          "grade_id": "c-015",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -334,7 +379,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-014",
+          "grade_id": "c-016",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -359,7 +404,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-015",
+          "grade_id": "c-017",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -379,7 +424,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-016",
+          "grade_id": "c-018",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -396,7 +441,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-017",
+          "grade_id": "c-019",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -416,7 +461,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-018",
+          "grade_id": "c-020",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -454,7 +499,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-019",
+          "grade_id": "c-021",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -474,7 +519,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-020",
+          "grade_id": "c-022",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -494,7 +539,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-021",
+          "grade_id": "c-023",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -514,7 +559,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-022",
+          "grade_id": "c-024",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -534,7 +579,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-023",
+          "grade_id": "c-025",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -560,7 +605,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-024",
+          "grade_id": "c-026",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -580,7 +625,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-025",
+          "grade_id": "c-027",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -597,7 +642,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-026",
+          "grade_id": "c-028",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -617,7 +662,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-027",
+          "grade_id": "c-029",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -648,7 +693,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-028",
+          "grade_id": "c-030",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -668,7 +713,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-029",
+          "grade_id": "c-031",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -688,7 +733,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-030",
+          "grade_id": "c-032",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -708,7 +753,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-031",
+          "grade_id": "c-033",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -773,7 +818,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-032",
+          "grade_id": "c-034",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -793,7 +838,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-033",
+          "grade_id": "c-035",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -813,7 +858,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-034",
+          "grade_id": "c-036",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -833,7 +878,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-035",
+          "grade_id": "c-037",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -850,7 +895,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-036",
+          "grade_id": "c-038",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -870,7 +915,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-037",
+          "grade_id": "c-039",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -895,7 +940,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-038",
+          "grade_id": "c-040",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -915,7 +960,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-039",
+          "grade_id": "c-041",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -935,7 +980,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-040",
+          "grade_id": "c-042",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -955,7 +1000,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-041",
+          "grade_id": "c-043",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -987,7 +1032,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-042",
+          "grade_id": "c-044",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1007,7 +1052,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-043",
+          "grade_id": "c-045",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1027,7 +1072,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-044",
+          "grade_id": "c-046",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1045,7 +1090,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-045",
+          "grade_id": "c-047",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1065,7 +1110,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-046",
+          "grade_id": "c-048",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1082,7 +1127,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-047",
+          "grade_id": "c-049",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1105,7 +1150,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-048",
+          "grade_id": "c-050",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1122,7 +1167,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-049",
+          "grade_id": "c-051",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1141,7 +1186,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-050",
+          "grade_id": "c-052",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1191,7 +1236,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-051",
+          "grade_id": "c-053",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1211,7 +1256,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-052",
+          "grade_id": "c-054",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1231,7 +1276,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-053",
+          "grade_id": "c-055",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1251,7 +1296,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-054",
+          "grade_id": "c-056",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1270,7 +1315,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-055",
+          "grade_id": "c-057",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1290,7 +1335,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-056",
+          "grade_id": "c-058",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1310,7 +1355,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-057",
+          "grade_id": "c-059",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1329,7 +1374,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-058",
+          "grade_id": "c-060",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1349,7 +1394,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-059",
+          "grade_id": "c-061",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1368,7 +1413,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-060",
+          "grade_id": "c-062",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1388,7 +1433,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-061",
+          "grade_id": "c-063",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -1428,7 +1473,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-062",
+          "grade_id": "c-064",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1448,7 +1493,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-063",
+          "grade_id": "c-065",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1468,7 +1513,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-064",
+          "grade_id": "c-066",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -1488,7 +1533,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-065",
+          "grade_id": "c-067",
           "locked": true,
           "schema_version": 3,
           "solution": false,
