--- a/01jupyter/notebooks/source/cs01/cs01_omp_multicore.py.ipynb
+++ b/01jupyter/notebooks/source/cs01/cs01_omp_multicore.py.ipynb
@@ -270,7 +270,6 @@
       },
       "source": [
         "%%bash_submit\n",
-        "\n",
         "OMP_NUM_THREADS=3 ./omp_parallel_mp.exe"
       ],
       "execution_count": null,
@@ -328,7 +327,18 @@
       },
       "source": [
         "%%writefile omp_parallel_num_threads.c\n",
-        "<!--- include nb/source/cs01/include/omp_parallel_num_threads.c --->"
+        "#include <stdio.h>\n",
+        "#include <stdlib.h>\n",
+        "\n",
+        "int main(int argc, char ** argv) {\n",
+        "  int nt = atoi(argv[1]);\n",
+        "  printf(\"before parallel\\n\");\n",
+        "#pragma omp parallel num_threads(nt)\n",
+        "  printf(\"in parallel\\n\");\n",
+        "  printf(\"after parallel\\n\");\n",
+        "  return 0;\n",
+        "}\n",
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -508,7 +518,20 @@
       },
       "source": [
         "%%writefile omp_parallel_rank.c\n",
-        "<!--- include nb/source/cs01/include/omp_parallel_rank.c --->"
+        "#include <stdio.h>\n",
+        "#include <omp.h>\n",
+        "\n",
+        "int main() {\n",
+        "  printf(\"hello\\n\");\n",
+        "#pragma omp parallel\n",
+        "  {\n",
+        "    int omp_nthreads = omp_get_num_threads();\n",
+        "    int omp_rank = omp_get_thread_num();\n",
+        "    printf(\"world %3d/%3d\\n\", omp_rank, omp_nthreads);\n",
+        "  }\n",
+        "  printf(\"good bye\\n\");\n",
+        "  return 0;\n",
+        "}"
       ],
       "execution_count": null,
       "outputs": []
@@ -637,7 +660,7 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
@@ -650,11 +673,11 @@
         }
       },
       "source": [
-        "<!--- code kernel=bash --->\n",
-        "cat /proc/cpuinfo | head -30\n",
-        "<!--- end code --->\n",
-        ""
-      ]
+        "%%bash\n",
+        "cat /proc/cpuinfo | head -30"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -702,7 +725,26 @@
       },
       "source": [
         "%%writefile omp_parallel_for.c\n",
-        "<!--- include nb/source/cs01/include/omp_parallel_for.c --->"
+        "#include <stdio.h>\n",
+        "#include <stdlib.h>\n",
+        "#include <omp.h>\n",
+        "\n",
+        "int main(int argc, char ** argv) {\n",
+        "  int m = (1 < argc ? atoi(argv[1]) : 10);\n",
+        "  printf(\"before parallel\\n\");\n",
+        "#pragma omp parallel\n",
+        "  {\n",
+        "    printf(\"in parallel, before for\\n\");\n",
+        "#pragma omp for\n",
+        "    for (int i = 0; i < m; i++) {\n",
+        "      printf(\"i = %3d\\n\", i);\n",
+        "    }\n",
+        "    printf(\"in parallel, after for\\n\");\n",
+        "  }\n",
+        "  printf(\"after parallel\\n\");\n",
+        "  return 0;\n",
+        "}\n",
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -827,7 +869,28 @@
       },
       "source": [
         "%%writefile omp_parallel_for_thread_num.c\n",
-        "<!--- include nb/source/cs01/include/omp_parallel_for_thread_num.c --->"
+        "#include <stdio.h>\n",
+        "#include <stdlib.h>\n",
+        "#include <omp.h>\n",
+        "#include <unistd.h>\n",
+        "\n",
+        "int main(int argc, char ** argv) {\n",
+        "  int m = (1 < argc ? atoi(argv[1]) : 10);\n",
+        "  printf(\"before parallel\\n\");\n",
+        "#pragma omp parallel\n",
+        "  {\n",
+        "    int nt = omp_get_num_threads();\n",
+        "#pragma omp for schedule(static)\n",
+        "    for (int i = 0; i < m; i++) {\n",
+        "      int t = omp_get_thread_num();\n",
+        "      usleep(i * 100000);\n",
+        "      printf(\"i = %3d, by thread %3d of %3d\\n\", i, t, nt);\n",
+        "    }\n",
+        "  }\n",
+        "  printf(\"after parallel\\n\");\n",
+        "  return 0;\n",
+        "}\n",
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -949,7 +1012,28 @@
       },
       "source": [
         "%%writefile omp_parallel_for_collapse.c\n",
-        "<!--- include nb/source/cs01/include/omp_parallel_for_collapse.c --->"
+        "#include <stdio.h>\n",
+        "#include <stdlib.h>\n",
+        "#include <omp.h>\n",
+        "#include <unistd.h>\n",
+        "\n",
+        "int main(int argc, char ** argv) {\n",
+        "  int m = (1 < argc ? atoi(argv[1]) : 4);\n",
+        "#pragma omp parallel\n",
+        "  {\n",
+        "    int nt = omp_get_num_threads();\n",
+        "#pragma omp for collapse(2)\n",
+        "    for (int i = 0; i < m; i++) {\n",
+        "      for (int j = 0; j < m; j++) {\n",
+        "        int t = omp_get_thread_num();\n",
+        "        usleep((i + j) * 100000);\n",
+        "        printf(\"i,j = %3d,%3d, by thread %3d of %3d\\n\", i, j, t, nt);\n",
+        "      }\n",
+        "    }\n",
+        "  }\n",
+        "  return 0;\n",
+        "}\n",
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -1041,7 +1125,54 @@
       },
       "source": [
         "%%writefile omp_speedup.c\n",
-        "<!--- include nb/source/cs01/include/omp_speedup.c --->"
+        "#include <assert.h>\n",
+        "#include <stdio.h>\n",
+        "#include <stdlib.h>\n",
+        "#include <omp.h>\n",
+        "#include <time.h>\n",
+        "#include <unistd.h>\n",
+        "\n",
+        "/* x = ax + b をひたすら n 回繰り返す.\n",
+        "   (|a| < 1.0 なら c によらず, x = b / (1 - a) に収束).\n",
+        "   n 回 mul + add を行う (-> 2 n flops) */\n",
+        "double lin_rec(double a, double b, double c, long n) {\n",
+        "  double x = c;\n",
+        "  for (long j = 0; j < n; j++) {\n",
+        "    x = a * x + b;\n",
+        "  }\n",
+        "  return x;\n",
+        "}\n",
+        "\n",
+        "int main(int argc, char ** argv) {\n",
+        "  long m = (1 < argc ? atoi(argv[1]) : 10);\n",
+        "  long n = (2 < argc ? atoi(argv[2]) : 1000 * 1000);\n",
+        "  double * x = (double *)calloc(sizeof(double), m);\n",
+        "  assert(x);\n",
+        "  printf(\"m = %ld, n = %ld\\n\", m, n);\n",
+        "  /* 計測開始 */\n",
+        "  double t0 = omp_get_wtime();\n",
+        "  /* 計算本体 */\n",
+        "#pragma omp parallel for\n",
+        "  for (long i = 0; i < m; i++) {\n",
+        "    x[i] = lin_rec(0.99, i + 1, 1.0, n);\n",
+        "  }\n",
+        "  /* 計測終了 */\n",
+        "  double t1 = omp_get_wtime();\n",
+        "  double dt = t1 - t0;          /* sec */\n",
+        "  /* 答え表示 (x[i] = 100 * (i + 1) くらいのはず) */\n",
+        "  for (long i = 0; i < m; i++) {\n",
+        "    printf(\"x[%3ld] = %9.3f\\n\", i, x[i]);\n",
+        "  }\n",
+        "  double flops = 2. * (double)m * (double)n;\n",
+        "  printf(\"elapsed    : %7.3f  sec\\n\", dt);\n",
+        "  printf(\"elapsed/m  : %7.3f msec\\n\", dt / m * 1e3);\n",
+        "  printf(\"elapsed/n  : %7.3f nsec\\n\", dt / n * 1e9);\n",
+        "  printf(\"elapsed/mn : %7.3f nsec\\n\", dt / (m * n) * 1e9);\n",
+        "  printf(\"flops      : %.2e\\n\", flops);\n",
+        "  printf(\"%.3f GFLOPS\\n\", flops / dt * 1e-9);\n",
+        "  return 0;\n",
+        "}\n",
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -1175,7 +1306,43 @@
         }
       },
       "source": [
-        "<!--- include nb/source/cs01/include/speedup.py --->"
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "DATA = r\"\"\"\n",
+        "1 xxxx GFLOPS\n",
+        "2 xxxx GFLOPS\n",
+        "3 xxxx GFLOPS\n",
+        "4 xxxx GFLOPS\n",
+        "6 xxxx GFLOPS\n",
+        "8 xxxx GFLOPS\n",
+        "12 xxxx GFLOPS\n",
+        "16 xxxx GFLOPS\n",
+        "20 xxxx GFLOPS\n",
+        "24 xxxx GFLOPS\n",
+        "28 xxxx GFLOPS\n",
+        "32 xxxx GFLOPS\n",
+        "\"\"\"\n",
+        "\n",
+        "def main():\n",
+        "    data = DATA.strip().split(\"\\n\")\n",
+        "    X = []\n",
+        "    Y = []\n",
+        "    L = []\n",
+        "    for line in data:\n",
+        "        fields = line.strip().split()\n",
+        "        if len(fields) != 3:\n",
+        "            continue\n",
+        "        x, y = fields[:2]\n",
+        "        X.append(float(x))\n",
+        "        Y.append(float(y))\n",
+        "        L.append(Y[0] / X[0] * float(x))\n",
+        "    plt.ylabel(\"GFLOPS\")\n",
+        "    plt.xlabel(\"num_threads\")\n",
+        "    plt.plot(X, L)\n",
+        "    plt.plot(X, Y)\n",
+        "    plt.show()\n",
+        "\n",
+        "main()"
       ],
       "execution_count": null,
       "outputs": []
@@ -1245,7 +1412,27 @@
       },
       "source": [
         "%%writefile integral.c\n",
-        "<!--- include nb/source/cs01/include/integral.c --->"
+        "#include <stdio.h>\n",
+        "#include <stdlib.h>\n",
+        "\n",
+        "double int_inv_1_x2(double a, double b, long n) {\n",
+        "  double s = 0.0;\n",
+        "  double dx = (b - a) / (double)n;\n",
+        "  for (long i = 0; i < n; i++) {\n",
+        "    double x = a + i * dx;\n",
+        "    s += 1 / (1 + x * x);\n",
+        "  }\n",
+        "  return s * dx;\n",
+        "}\n",
+        "\n",
+        "int main(int argc, char ** argv) {\n",
+        "  double a = (argc > 1 ? atof(argv[1]) : 0.0);\n",
+        "  double b = (argc > 2 ? atof(argv[2]) : 1.0);\n",
+        "  long n   = (argc > 3 ? atol(argv[3]) : 1000L * 1000L * 1000L);\n",
+        "  double s = int_inv_1_x2(a, b, n);\n",
+        "  printf(\"s = %f\\n\", s);\n",
+        "  return 0;\n",
+        "}"
       ],
       "execution_count": null,
       "outputs": []
@@ -1324,7 +1511,28 @@
       },
       "source": [
         "%%writefile omp_integral_racy.c\n",
-        "<!--- include nb/source/cs01/include/omp_integral_racy.c --->"
+        "#include <stdio.h>\n",
+        "#include <stdlib.h>\n",
+        "\n",
+        "double int_inv_1_x2(double a, double b, long n) {\n",
+        "  double s = 0.0;\n",
+        "  double dx = (b - a) / (double)n;\n",
+        "#pragma omp parallel for\n",
+        "  for (long i = 0; i < n; i++) {\n",
+        "    double x = a + i * dx;\n",
+        "    s += 1 / (1 + x * x);\n",
+        "  }\n",
+        "  return s * dx;\n",
+        "}\n",
+        "\n",
+        "int main(int argc, char ** argv) {\n",
+        "  double a = (argc > 1 ? atof(argv[1]) : 0.0);\n",
+        "  double b = (argc > 2 ? atof(argv[2]) : 1.0);\n",
+        "  long n   = (argc > 3 ? atol(argv[3]) : 1000L * 1000L * 1000L);\n",
+        "  double s = int_inv_1_x2(a, b, n);\n",
+        "  printf(\"s = %f\\n\", s);\n",
+        "  return 0;\n",
+        "}"
       ],
       "execution_count": null,
       "outputs": []
@@ -1482,7 +1690,28 @@
       },
       "source": [
         "%%writefile omp_integral_reduction.c\n",
-        "<!--- include nb/source/cs01/include/omp_integral_reduction.c --->"
+        "#include <stdio.h>\n",
+        "#include <stdlib.h>\n",
+        "\n",
+        "double int_inv_1_x2(double a, double b, long n) {\n",
+        "  double s = 0.0;\n",
+        "  double dx = (b - a) / (double)n;\n",
+        "#pragma omp parallel for reduction(+:s)\n",
+        "  for (long i = 0; i < n; i++) {\n",
+        "    double x = a + i * dx;\n",
+        "    s += 1 / (1 + x * x);\n",
+        "  }\n",
+        "  return s * dx;\n",
+        "}\n",
+        "\n",
+        "int main(int argc, char ** argv) {\n",
+        "  double a = (argc > 1 ? atof(argv[1]) : 0.0);\n",
+        "  double b = (argc > 2 ? atof(argv[2]) : 1.0);\n",
+        "  long n   = (argc > 3 ? atol(argv[3]) : 1000L * 1000L * 1000L);\n",
+        "  double s = int_inv_1_x2(a, b, n);\n",
+        "  printf(\"s = %f\\n\", s);\n",
+        "  return 0;\n",
+        "}"
       ],
       "execution_count": null,
       "outputs": []
